[gd_scene load_steps=2 format=3 uid="uid://blauksugtg8ro"]

[ext_resource type="Script" path="res://Scenes/Menus/LevelSelect/SelectLevel.gd" id="1_8sxpd"]

[node name="SelectLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8sxpd")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 317.0
offset_bottom = 357.0
max_columns = 2
same_column_width = true

[connection signal="item_clicked" from="ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
